--- a/style.css
+++ b/style.css
@@ -1,5 +1,82 @@
-#productos{
+* {
+    margin: 0;
+    padding: 0;
+  }
+  
+  html {
+    font-size: 62.5% !important;
+  }
+body{
+background-color: #96A13A;
+}
+h1{
+    display: flex;
+    justify-content: center;
+    
+}
+#seleccion{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+   
+}
+#seleccion div{
+    display: flex;
+    width: 200px;
+    height: fit-content;
+}
+#seleccion div div{
+    display: flex;
+    justify-content: space-between;
+}
+
+#holder{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  
+
+}
+#board{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    column-gap: 5px;
+    row-gap: 20px;
+    justify-items: center;
+
+    width: 100%;
+    height: fit-content;
+
+    background-color: #CB793A;
+    border: 5px #55251D solid;
+    margin-bottom: 30px;
+}
+.compraProducto{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.productName{
+    text-align: center;
+}
+footer{
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    width: 100%;
+    background-color: #CB793A;
+    border-top: 5px #55251D solid;
+}
+.imagenProducto{
+    width: 200px !important;
+    height: 150px !important;
+}
+/*#resumen{
     display: flex;
     justify-content: space-around;
-    flex-direction: row;
-}
+    width: 100%;
+    height: 100%;
+   
+
+}*/
