--- a/style.css
+++ b/style.css
@@ -3,11 +3,16 @@
     padding: 0;
   }
   
-  html {
+html {
     font-size: 62.5% !important;
   }
 body{
 background-color: #96A13A;
+}
+header{
+    background-color: #CB793A;
+    border-bottom: 5px #55251D solid;
+
 }
 h1{
     display: flex;
@@ -17,7 +22,7 @@ h1{
 #seleccion{
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 50px;
    
 }
 #seleccion div{
@@ -39,18 +44,23 @@ h1{
 }
 #board{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 0.5fr 0.5fr 0.5fr;
     grid-template-rows: 1fr;
-    column-gap: 5px;
+    column-gap: 20px;
     row-gap: 20px;
     justify-items: center;
 
-    width: 100%;
+    width: fit-content;
     height: fit-content;
+    padding-left: 20px;
+    padding-right: 20px;
 
     background-color: #CB793A;
     border: 5px #55251D solid;
-    margin-bottom: 30px;
+}
+.producto{
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 .compraProducto{
     display: flex;
@@ -60,23 +70,19 @@ h1{
 .productName{
     text-align: center;
 }
+.imagenProducto{
+    width: 250px ;
+    height: 200px ;
+}
 footer{
     position: fixed;
     bottom: 0;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+
+
     width: 100%;
     background-color: #CB793A;
     border-top: 5px #55251D solid;
 }
-.imagenProducto{
-    width: 200px !important;
-    height: 150px !important;
-}
-/*#resumen{
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    height: 100%;
-   
-
-}*/
