--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    text-decoration: none;
   }
   
 html {
@@ -64,6 +65,7 @@ h1{
     background-color: #CB793A;
     border: 5px #55251D solid;
 }
+
 .producto{
     margin-top: 10px;
     margin-bottom: 10px;
@@ -114,4 +116,11 @@ footer{
     width: 100%;
     background-color: #CB793A;
     border-top: 5px #55251D solid;
+}
+#articulosCarrito{
+    margin-left: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-auto-flow: column;
 }
