--- a/style.css
+++ b/style.css
@@ -121,6 +121,23 @@ footer{
     background-color: #CB793A;
     border-top: 5px #55251D solid;
 }
+#footerTotal{
+    display: flex;
+    justify-content: space-between;
+    
+}
+#finalizarCompra{
+    align-self: center;
+    width: 150px;
+    height: 40px;
+    margin-right: 10px;
+}
+#voucher{
+    align-self: center;
+    width: 75px;
+    height: 40px;
+    margin-right: 10px;
+}
 #articulosCarrito{
     margin-left: 30px;
     display: grid;
@@ -128,4 +145,5 @@ footer{
     grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-auto-flow: column;
 }
+
  
